fix(footer): fix footer position and icon text-align

--- a/style.css
+++ b/style.css
@@ -17,8 +17,9 @@ body {
 }
 
 main {
-    position: relative;
-    top: 20%;
+    box-sizing: border-box;
+    height: calc(100vh - 45px);
+    padding-top: 100px;
 }
 
 h1,
@@ -83,6 +84,7 @@ button:active {
     display: flex;
     justify-content:space-evenly;
     gap: 20px;
+    width: 85%;
     max-width: 400px;
     min-width: fit-content;
     padding: 20px 20px;
@@ -180,15 +182,14 @@ img {
 }
 
 footer {
-    position: absolute;
-    bottom: 0;
+    position: relative;
     width: 100%;
     height: 45px;
     display: flex;
     justify-content: center;
     align-content: center;
     background-color: rgb(0, 0, 0, 0.9);
-    font-size: 0.9rem;
+    font-size: 0.8rem;
 }
 
 footer a,
@@ -210,6 +211,7 @@ footer img {
     margin-left: 10px;
     border-radius: 100%;
     padding: 1px;
+    vertical-align: text-bottom;
 }
 
 footer img:hover {
